--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</title>
 </head>
 <body>
-
+	<div id="load"></div>
 	<script type="text/javascript" src="jquery-3.6.0.min.js"></script>
 	<script type="text/javascript" src="classes.js"></script>
 	<script type="text/javascript" src="script.js"></script>
